web icon and footer added

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Test Links</title>
+    <link rel="icon" href="../favicon.ico.ico" type="favicon" />
 </head>
 <body>
     <h1 name="top">Links and Anchors</h1> 
@@ -43,6 +44,13 @@ to web pages or a link to anything else that can be represented in a  a URL. To 
 
     </section>
     <a href ="#top">GOTO TOP</a>
+
+    <footer>
+        <p>Author: Atubi Ugonna Daniel<br>
+          Phone: 09055105885<br>
+          <a href="dannielwilliams71@gmail.com">danielwilliams71@gmail.com</a>
+        </p>
+      </footer>
                                     
 </body>
 </html>
